[package]
name = "chatserver"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
tokio = { version = "1.11.0", features = ["full"] }
tui = "0.16"
termion = "1.5"
log = "0.4"
env_logger = "0.8.4"
