[package]
name = "chatserver"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
tokio = { version = "1.11.0", features = ["full"] }
log = "0.4"
env_logger = "0.8.4"
futures = "0.3"

# tracing = "0.1"
# tracing-tracy = "0.7.0"

[dependencies.crossterm]
version = "0.21"
features = ["event-stream"]
